--- a/themes/book/layouts/posts/list.html
+++ b/themes/book/layouts/posts/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  {{ $paginator := .Paginate (where .Pages "Type" "post") }}
+  {{ $paginator := .Paginate (where .Pages "Params.hidden" "ne" true) }}
   {{ range sort .Paginator.Pages }}
   <article>
     <h2>
