--- a/themes/book/layouts/404.html
+++ b/themes/book/layouts/404.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-{{- partial "docs/shared" -}}
+{{- partial "pages/shared" -}}
 <html>
 
 <head>
-  {{ partial "docs/html-head" . }}
-  {{ partial "docs/inject/head" . }}
+  {{ partial "pages/html-head" . }}
+  {{ partial "pages/inject/head" . }}
 </head>
 
 <body>
@@ -12,7 +12,7 @@
       <h1>404 Not Found</h1>
   </main>
 
-  {{ partial "docs/inject/body" . }}
+  {{ partial "pages/inject/body" . }}
   {{ template "_internal/google_analytics_async.html" . }}
 </body>
 
