--- a/themes/book/layouts/partials/pages/brand.html
+++ b/themes/book/layouts/partials/pages/brand.html
@@ -1,3 +1,6 @@
+<a href="{{ .Site.BaseURL }}">
+  <img src="/core/logo.png" width="50%" style="margin: -0.4rem 0 0.8rem" />
+</a>
 <h2 class="book-brand">
   <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
 </h2>
